--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="logo">WebDemo</div>
         <ul class="nav">
           <li><a href="/">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/contact.html">Contact</a></li>
-          <li><a href="/team.html">Team</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="team.html">Project</a></li>
         </ul>
       </div>
     </nav>
