--- a/team.html
+++ b/team.html
@@ -33,12 +33,12 @@
         <p>92410990 허다현 / github 주소: <a href="https://github.com/chick127">Github</a></p>
 
         <a href=https://github.com/minyeong0125>
-        <img src="https://avatars.githubusercontent.com/u/202569496?v=4" height="200px"></a> 
-        <p style="position: relative; left: 75px; bottom: 0px;">박민영</p>
+        <img src="https://avatars.githubusercontent.com/u/202569496?v=4" height="200px" style="position: absolute; bottom: 250px;"></a> 
+        
 
         <a href=https://github.com/Junbyung2>
         <img src="https://avatars.githubusercontent.com/u/202569361?v=4" height="200px" style="position: absolute; bottom: 185px; left: 450px"></a>
-        <p style="position: relative; left: 280px; bottom: 44px;">송미강</p>
+        <p style="position: relative; left: 280px; bottom: 100px;">송미강</p>
 
         <a href=https://github.com/euniii0224>
         <img src="https://avatars.githubusercontent.com/u/202242390?v=4" height="200px" style="position: absolute; bottom: 185px; left: 660px"></a>
