--- a/team.html
+++ b/team.html
@@ -34,11 +34,11 @@
 
         <a href=https://github.com/minyeong0125>
         <img src="https://avatars.githubusercontent.com/u/202569496?v=4" height="200px" style="position: absolute; bottom: 100px;"></a> 
-        <p style="position: relative; left: 75px; bottom: 0px;">박민영</p>
+        <p style="position: relative; left: 75px; top: 400px;">박민영</p>
 
         <a href=https://github.com/Junbyung2>
         <img src="https://avatars.githubusercontent.com/u/202569361?v=4" height="200px" style="position: absolute; bottom: 100px; left: 450px"></a>
-        <p style="position: relative; left: 280px; bottom: 100px;">송미강</p>
+        <p style="position: relative; left: 280px; top: 400px;">송미강</p>
 
         <a href=https://github.com/euniii0224>
         <img src="https://avatars.githubusercontent.com/u/202242390?v=4" height="200px" style="position: absolute; bottom: 100px; left: 660px"></a>
